# geocam

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  rp.json  setup.py  test.py  test_udp_command.py
docs/source/: bibliography.rst  conf.py  examples.rst  geocam.rst  index.rst  installation.rst  questions.rst  sectionAboutTheory.rst
docs/source/autoapi/communication/: index.rst
docs/source/autoapi/controller/: index.rst
docs/source/autoapi/geocam/: index.rst
docs/source/autoapi/geocam/__main__/: index.rst
docs/source/autoapi/geocam/calibrator/: index.rst
docs/source/autoapi/geocam/communicator/: index.rst
docs/source/autoapi/geocam/controller/: index.rst
docs/source/autoapi/geocam/rpicamera/: index.rst
src/backend/: server.py
src/backend/templates/: index.html
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
src/frontend/app/: index.html
src/frontend/app/assets/: index-313b3794.css  index-554136c6.js  index-593b0768.js  index-94fdaf84.css  index-e624a0b6.js
src/frontend/src/: App.vue  main.js
src/frontend/src/components/: About.vue  Cameras.vue  Capture.vue  Preview.vue
src/frontend/src/stores/: geocam.js
src/geocam/: __init__.py  __main__.py  calibrate_camera.py  calibrator.py  calibrator_save.py  calibrator_utils.py  camera.py  capture_as_buffers.py  cloud_of_3d_points_dict_filtered.json  communicator.py  controller.py  coords_2d_projections_dict.json  custom_calibration.py  custom_calibration_v0.py  draft.txt  easy_capture.py  easy_capture_computer_side.py  efficient_choices_for_calibration.py  estimate_quality_function.py  get_cloud_of_3d_points.py  get_intial_guess_for_camera_matrix.py  get_scatter_of_2D_points_projection.py  launch.py  log.py  note.txt  receiver.py  rpicamera.py  sender.py  sender2.py  simple_test.py  sin.out  streaming.py  test.py  test2.py  test_communicator.py  test_out.py  test_plots_3d.py  test_utils.py  utils.py
src/geocam/dependencies/: flask-2.3.3-py3-none-any.whl  getmac-0.9.4-py2.py3-none-any.whl  python3-distutils_3.9.2-1_all.deb  python3-lib2to3_3.9.2-1_all.deb  werkzeug-2.3.7-py3-none-any.whl
src/server/: launcher.py
src/server/frontend/: index.html  package-lock.json  package.json
src/server/frontend/src/: App.vue
(+5 files in other folders)
